// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopTracks Component handles tracks without a 300px image gracefully 1`] = `
<div>
  <div
    className="css-ccroti"
  >
    <h3
      className="css-1pgqsji"
    >
      Top Tracks
    </h3>
  </div>
  <p
    className="css-1avyp1d"
  >
    My 12 most-played tracks over the last 4 weeks.
  </p>
  <div
    className="media-item_grid null css-4004kc"
  >
    <a
      className="media-item_media css-1avyp1d"
      href="http://spotify.com/track3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Song Three – Artist Four"
    >
      <img
        alt="cover artwork"
        className="css-1yymcx5"
        crossOrigin="anonymous"
        loading="lazy"
      />
    </a>
  </div>
</div>
`;

exports[`TopTracks Component renders correctly when loading 1`] = `
<div>
  <div
    className="css-ccroti"
  >
    <h3
      className="css-1pgqsji"
    >
      Top Tracks
    </h3>
  </div>
  <p
    className="css-1avyp1d"
  >
    My 12 most-played tracks over the last 4 weeks.
  </p>
  <div
    className="media-item_grid null css-4004kc"
  >
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="show-loading-animation"
    >
      <div
        className="rect-shape css-l29vsk"
        style={
          {
            "backgroundColor": "#efefef",
            "height": "100%",
            "marginRight": 10,
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TopTracks Component renders correctly with no tracks 1`] = `
<div>
  <div
    className="css-ccroti"
  >
    <h3
      className="css-1pgqsji"
    >
      Top Tracks
    </h3>
  </div>
  <p
    className="css-1avyp1d"
  >
    My 12 most-played tracks over the last 4 weeks.
  </p>
  <div
    className="media-item_grid null css-4004kc"
  />
</div>
`;

exports[`TopTracks Component renders correctly with tracks 1`] = `
<div>
  <div
    className="css-ccroti"
  >
    <h3
      className="css-1pgqsji"
    >
      Top Tracks
    </h3>
  </div>
  <p
    className="css-1avyp1d"
  >
    My 12 most-played tracks over the last 4 weeks.
  </p>
  <div
    className="media-item_grid null css-4004kc"
  >
    <a
      className="media-item_media css-1avyp1d"
      href="http://spotify.com/track1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Song One – Artist One, Artist Two"
    >
      <img
        alt="cover artwork"
        className="css-1yymcx5"
        crossOrigin="anonymous"
        loading="lazy"
        src="http://example.com/medium.jpg"
      />
    </a>
    <a
      className="media-item_media css-1avyp1d"
      href="http://spotify.com/track2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Song Two – Artist Three"
    >
      <img
        alt="cover artwork"
        className="css-1yymcx5"
        crossOrigin="anonymous"
        loading="lazy"
        src="http://example.com/medium2.jpg"
      />
    </a>
  </div>
</div>
`;
